Using artificial intelligence to raise the level of OOP applied to the project.